--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,26 +21,34 @@ include(script/boost.cmake)
 include(script/postgresql.cmake)
 include(script/sqlite3.cmake)
 include(script/openssl.cmake)
+include(script/protobuf.cmake)
+include(script/grpc.cmake)
 include(script/wxwidgets.cmake)
 
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS
+        proto/eventlogservice.proto proto/eventmessage.proto)
+cmake_print_variables(PROTO_SRCS)
+cmake_print_variables(PROTO_HDRS)
+cmake_print_variables(CMAKE_CURRENT_BINARY_DIR) # Path to the generated cpp files
+
 add_library(workflowserv STATIC
-        src/genericworkflowserver.cpp src/genericworkflowserver.h)
+        src/genericworkflowserver.cpp include/workflow/genericworkflowserver.h
+        ${PROTO_SRCS} ${PROTO_HDRS}
+        )
 
 add_subdirectory(workflowexplorer)
 
-#target_include_directories(workflowserv PRIVATE ${Boost_INCLUDE_DIRS})
-#target_include_directories(workflowserv PRIVATE ${SQLite3_INCLUDE_DIRS})
-#target_include_directories(workflowserv PRIVATE ${PostgreSQL_INCLUDE_DIRS})
+target_include_directories(workflowserv PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(workflowserv PRIVATE ${utillib_SOURCE_DIR}/include)
-#target_include_directories(workflowserv PRIVATE ${mdflib_SOURCE_DIR}/include)
 target_include_directories(workflowserv PRIVATE ${workflowlib_SOURCE_DIR}/include)
 target_include_directories(workflowserv PRIVATE ${odslib_SOURCE_DIR}/include)
 target_include_directories(workflowserv PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
-
+target_include_directories(workflowserv PRIVATE ${Protobuf_INCLUDE_DIRS})
+target_include_directories(workflowserv PRIVATE ${gRPC_INCLUDE_DIRS} )
 #target_include_directories(ods PUBLIC
 #        $<INSTALL_INTERFACE:include>
 #        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 #        )
+
+
 target_compile_definitions(workflowserv PRIVATE XML_STATIC)
-
-
